# db-pilot

./: Cargo.toml  EVO_CARD.md  README.md  REPORT.md
.github/workflows/: build-release.yml
frontend/: index.html  package.json
frontend/src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/src/: lib.rs
